@@ -12,6 +12,7 @@
 
 - Wordlist encoding: Support added for internal convert from and to user-defined encoding during runtime
 - Wordlist encoding: Added parameters --encoding-from and --encoding-to to configure wordlist encoding handling
+- Rules: Support added for rule 'eX'
 
 ##
 ## Improvements
